# qiymeti-az

./: LICENSE  README.md  pyproject.toml  setup.py
qiymeti_az/: __init__.py  company.py  scrapper.py
tests/: test_bytelecom.py
